# inotify_daemon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
daemon/: basedaemon.cpp  basedaemon.h  logger.cpp  logger.h  sync-daemon.cpp  sync-daemon.h
src/: main.cpp
src/daemon/: basedaemon.cpp  basedaemon.h  sync-daemon.cpp  sync-daemon.h
src/daemon/logger/: logger.cpp  logger.h
src/daemon/options/: options.cpp  options.h
